<resources>
    <string name="app_name">Alias</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Start_game">Start</string>
    <string name="ALIAS_Start"> ALIAS</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="change_language">EN</string>
    <string name="main_menu">Main menu</string>
    <string name="number_of_teams_label">How many teams will play?</string>
    <string name="number_of_teams_input_validation_explain">*Number is not between 2 and 10</string>
    <string name="difficulty">Difficulty</string>
    <string name="medium">Medium</string>
    <string name="senior">Senior</string>
    <string name="junior">Junior</string>
    <string name="difficulty_selection">Difficulty</string>
    <string name="time">Time</string>
    <string name="time_left">Time left:</string>
    <string name="start">Start</string>
    <string name="zero">0</string>
    <string name="ten">10</string>
    <string name="points_required">Points required</string>
    <string name="to_win_the_game">to win the game</string>
    <string name="round_timer">Round timer</string>
    <string name="length_in_seconds">length in seconds</string>
    <string name="skip_penalty">Skip penalty</string>
    <string name="every_skipped_word">every skipped word deducts one point</string>
    <string name="sounds">Sounds</string>
    <string name="music">Music</string>
    <string name="turn_on_sound">turn on sound effects</string>
    <string name="how_to_play">How to play</string>
    <string name="htp_header">An exciting co-op game!</string>
    <string name="htp_goal">The goal of the game is to explain as many words as possible to your team in a limited time.</string>
    <string name="htp_rule1">Players can\'t use items to show shape or detail of resulting word.</string>
    <string name="htp_rule2">Players can\'t explain the word in another language.</string>
    <string name="htp_rule3">The first team to reach the specified limit of points in the rules wins.</string>
    <string name="htp_rule4">Each guessed word adds 1 point to the team. Skipping a word deducts number of points specified in the rules.</string>
    <string name="stop">Stop</string>
    <string name="continue_button">Continue</string>
    <string name="get_ready_to_play">Get ready to play!</string>
    <string name="round">Round</string>
    <string name="team_name">Team name</string>
    <string name="end_game_button">End</string>
    <string name="end_of_the_game">END OF THE GAME</string>
    <string name="points_scored">Points scored</string>
    <string name="play_again">Play again</string>
    <string name="lets_go">LET\'S GO!</string>
    <string name="the_winner_is">The winner is:</string>
    <string name="guessed">Guessed</string>
    <string name="skipped">Skipped</string>
    <string name="last_word">Last word!</string>
    <string name="off">OFF</string>
    <string name="off_ti">OFF</string>
    <string name="which_team_guessed">Which team guessed the word?</string>
    <string name="save">Save</string>
    <string name="SETTINGS">SETTINGS</string>
    <string name="More">More</string>
    <string name="more_header">Creators</string>
    <string name="more_team">© Team: JATI</string>
    <string name="round_points">Round points</string>
    <string name="total_points">Total points</string>
    <string name="round_name">Round</string>
</resources>
