<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings">


    //difficulty selection

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/difficulty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RadioButton
            android:id="@+id/Junior"
            android:layout_width="83dp"
            android:layout_height="48dp"
            android:checked="true"
            android:text="@string/junior" />

        <RadioButton
            android:id="@+id/Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/Senior"
            android:layout_width="83dp"
            android:layout_height="48dp"
            android:text="@string/senior" />
    </RadioGroup>
    //difficulty selection
</androidx.constraintlayout.widget.ConstraintLayout>