<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Main">

    <Button
        android:id="@+id/button_start"
        android:layout_width="153dp"
        android:layout_height="52dp"
        android:text="@string/Start_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.721" />

    <Button
        android:id="@+id/button_lang"
        android:layout_width="62dp"
        android:layout_height="38dp"
        android:text="@string/change_language"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"

        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button_howtoplay"
        android:layout_width="153dp"
        android:layout_height="52dp"
        android:text="@string/how_to_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_start"
        app:layout_constraintVertical_bias="0.218" />

    <Switch
        android:id="@+id/Music_switch"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="320dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Music_textview"
        android:layout_width="48dp"
        android:layout_height="21dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="24dp"
        android:text="@string/music"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/Music_switch"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/sound_effect_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="320dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="50dp"
        android:layout_height="22dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="24dp"
        android:text="@string/sounds"
        app:layout_constraintBottom_toTopOf="@+id/sound_effect_switch"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/music_off_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="335dp"
        android:text="@string/off"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Music_switch" />

    <TextView
        android:id="@+id/sounds_off_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="335dp"
        android:text="@string/off_ti"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sound_effect_switch" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="172dp"
        app:layout_constraintBottom_toTopOf="@+id/button_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.278"
        app:srcCompat="@mipmap/ic_launcher" />
</androidx.constraintlayout.widget.ConstraintLayout>